mdapipkg/objects/Cvent_Registration_Guest__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company_FF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <label>Contact Id_FF</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth_FF</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation_FF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email_FF</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_Id__c</fullName>
        <label>Event Id_FF</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Title__c</fullName>
        <label>Event Title_FF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event_FF</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Cvent Registration Guests</relationshipLabel>
        <relationshipName>Cvent_Registration_Guests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name_FF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender_FF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name_FF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name_FF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile_FF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Contact_FF</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cvent Registration Guests</relationshipLabel>
        <relationshipName>Cvent_Registration_Guests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <label>Participant_FF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone_FF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Id__c</fullName>
        <label>Registration Id_FF</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title_FF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Cvent Registration Guest</label>
    <nameField>
        <label>Cvent Registration Guest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cvent Registration Guests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>